make Docs responsive on mobile (fixes #57)

--- a/themes/aframe/source/css/_common.styl
+++ b/themes/aframe/source/css/_common.styl
@@ -172,3 +172,11 @@ p
     clear both
     content ""
     display table
+
+@media screen and (max-width: 800px)
+    .sidebar__wrap,
+    .copy__wrap
+        padding 20px
+
+    .logo__wordmark
+        margin-bottom 20px
